# atmosphere

./: .gitignore  .gitmodules  .hgignore  .hgtags  .travis.yml  AGENTS.md  ATMOSPHERE_3_ROADMAP.md  AtmospherePro.html  CHANGELOG.md  CHANGELOGS.txt  CNAME  CODE_OF_CONDUCT.md  MIGRATION.md  README  README.md  README.mv  ROADMAP_TO_3.0.0.md  SECURITY.md  SKILLCARDS.md  TowerControl.html  VERSION.txt  config_table.html  donate.html  download.html  games.html  index.html  javadoc.sh  jreleaser.yml  package-lock.json  params.json  pom.xml  pom.xml.bak  project-info.html  project-reports.html  release.html  release21.html  release22.html  release23.html  robots.txt  subscription.html  (+4 more)
.claude/: settings.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: FUNDING.yml  dependabot.yml
.harness/: README.md  atmosphere-doc-version-allowlist.txt  blog-claims.json  capabilities.snapshot.json  doc-symbol-allowlist.txt  doc-version-allowlist.txt  drift-log.md  enumeration-allowlist.txt  external-class-allowlist.txt  facts.json  orphan-class-allowlist.txt  phantom-javadoc-allowlist.txt  postmortem-4.0.51-mcp-oversell.md  private-handle-allowlist.txt  release-audit-truth.md  thirdparty-version-allowlist.txt  url-allowlist.txt
_astro/: index.BJI4Qdhj.css  index.Bb0tqHES.css  index.BlhRpVm9.css  index.BvmiLUbA.css  index.CCU0PP-b.css  index.CHrGXdD4.css  index.CyYnpeHF.css  index.DGxYH6-4.css  index.DLXsQ1wU.css  index.DdBZF5r0.css  index.Dy4VgDoz.css  index.DyQHB5_E.css  index.SwQP4sHI.css  index.iU-Ric-a.css
apidocs/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  options  overview-frame.html  overview-summary.html  overview-tree.html  package-list  package-search-index.js  packages  search.html  serialized-form.html  tag-search-index.js  type-search-index.js
assembly/: pom.xml
atmosphere.js/: .gitignore  .npmignore  .npmrc  PUBLISHING.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
bom/: pom.xml
buildtools/: pom.xml
claude_docs/: 4.0-release-fixes-plan.md
modules/crewai/sidecar/: .gitignore  README.md  pyproject.toml
modules/crewai/sidecar/examples/: ollama_crew.py
modules/crewai/sidecar/src/atmosphere_crewai_bridge/: __init__.py  __main__.py  app.py  crew_loader.py  sessions.py  stream.py  tools.py
modules/crewai/sidecar/tests/: __init__.py  conftest.py  test_health.py  test_sessions_lifecycle.py  test_tools.py  test_tools_in_sessions.py  test_wire_shape.py
(+10907 files in other folders)
